--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ prefixo",
     "+ pronoun": "+ pronome",
     "+ suffix": "+ sufixo",
-    ":count contact|:count contacts": ":count contato",
-    ":count hour slept|:count hours slept": ":count hora dormi",
+    ":count contact|:count contacts": ":count contato|:count contatos",
+    ":count hour slept|:count hours slept": ":count hora dormi|:count horas dormidas",
     ":count min read": ":count minutos de leitura",
-    ":count post|:count posts": ":count postagem",
-    ":count template section|:count template sections": ":count seção de modelo",
-    ":count word|:count words": ":count palavra",
+    ":count post|:count posts": ":count postagem|:count postagens",
+    ":count template section|:count template sections": ":count seção de modelo|:count seções de modelo",
+    ":count word|:count words": ":count palavra|:count palavras",
     ":distance km": ":distance km",
     ":distance miles": ":distance milhas",
     ":file at line :line": ":file na linha :line",
@@ -763,7 +763,7 @@
     "Rabbit": "Coelho",
     "Ran": "Corrido",
     "Rat": "Rato",
-    "Read :count time|Read :count times": "Leia :count vez",
+    "Read :count time|Read :count times": "Leia :count vez|Leia :count vezes",
     "Record a loan": "Registrar um empréstimo",
     "Record your mood": "Grave seu humor",
     "Recovery Code": "Código de Recuperação",
@@ -853,7 +853,7 @@
     "Sign in to your account": "Faça login em sua conta",
     "Sign up for an account": "Inscreva-se pra uma conta",
     "Sikh": "Sikh",
-    "Slept :count hour|Slept :count hours": "Dormi :count hora",
+    "Slept :count hour|Slept :count hours": "Dormi :count hora|Dormi :count horas",
     "Slice of life": "Fatia de vida",
     "Slices of life": "Fatias de vida",
     "Small animal": "Animal pequeno",
