--- a/lang/fr.json
+++ b/lang/fr.json
@@ -44,7 +44,7 @@
     "A contact information can be clickable. For instance, a phone number can be clickable and launch the default application in your computer. If you do not know the protocol for the type you are adding, you can simply omit this field.": "Une information de contact peut être cliquable. Par exemple, un numéro de téléphone peut être cliquable et lancer l’application par défaut sur votre ordinateur. Si vous ne connaissez pas le protocole du type que vous ajoutez, vous pouvez simplement omettre ce champ.",
     "Activate": "Activer",
     "Activity feed": "Flux d’activité",
-    "Activity in this vault": "Activité dans ce coffre-fort",
+    "Activity in this vault": "Activité dans ce coffre",
     "Add": "Ajouter",
     "add a call reason type": "ajouter un type de motif d’appel",
     "Add a contact": "Ajouter un contact",
@@ -96,7 +96,7 @@
     "Add at least one module.": "Ajoutez au moins un module.",
     "Add a type": "Ajouter un type",
     "Add a user": "Ajouter un utilisateur",
-    "Add a vault": "Ajouter un coffre-fort",
+    "Add a vault": "Ajouter un coffre",
     "Add date": "Ajouter une date",
     "Added.": "Ajouté.",
     "added a contact information": "ajouté une information de contact",
@@ -122,9 +122,9 @@
     "a father-son relation shown on the father page,": "une relation père-fils indiquée sur la page père,",
     "after the next occurence of the date.": "après la prochaine occurrence de la date.",
     "A group is two or more people together. It can be a family, a household, a sport club. Whatever is important to you.": "Un groupe est composé de deux personnes ou plus ensemble. Cela peut être une famille, un foyer, un club de sport. Tout ce qui est important pour vous.",
-    "All contacts in the vault": "Tous les contacts dans le coffre-fort",
+    "All contacts in the vault": "Tous les contacts dans le coffre",
     "All files": "Tous les fichiers",
-    "All groups in the vault": "Tous les groupes dans le coffre-fort",
+    "All groups in the vault": "Tous les groupes dans le coffre",
     "All journal metrics in :name": "Toutes les métriques du journal dans :name",
     "All of the people that are part of this team.": "Toutes les personnes faisant partie de cette équipe.",
     "All rights reserved.": "Tous droits réservés.",
@@ -143,9 +143,9 @@
     "All the gift states": "Tous les états cadeaux",
     "All the group types": "Tous les types de groupes",
     "All the important dates": "Toutes les dates importantes",
-    "All the important date types used in the vault": "Tous les types de dates importants utilisés dans le coffre-fort",
+    "All the important date types used in the vault": "Tous les types de dates importants utilisés dans le coffre",
     "All the journals": "Toutes les revues",
-    "All the labels used in the vault": "Toutes les étiquettes utilisées dans le coffre-fort",
+    "All the labels used in the vault": "Toutes les étiquettes utilisées dans le coffre",
     "All the notes": "Toutes les notes",
     "All the pet categories": "Toutes les catégories d’animaux",
     "All the photos": "Toutes les photos",
@@ -155,7 +155,7 @@
     "All the religions": "Toutes les religions",
     "All the reports": "Tous les rapports",
     "All the slices of life in :name": "Toutes les tranches de vie de :name",
-    "All the tags used in the vault": "Toutes les balises utilisées dans le coffre-fort",
+    "All the tags used in the vault": "Toutes les balises utilisées dans le coffre",
     "All the templates": "Tous les modèles",
     "All the vaults": "Tous les coffres",
     "All the vaults in the account": "Tous les coffres du compte",
@@ -202,7 +202,7 @@
     "At": "À",
     "at ": "à",
     "Ate": "A mangé",
-    "A template defines how contacts should be displayed. You can have as many templates as you want - they are defined in your Account settings. However, you might want to define a default template so all your contacts in this vault have this template by default.": "Un modèle définit la manière dont les contacts doivent être affichés. Vous pouvez avoir autant de modèles que vous le souhaitez – ils sont définis dans les paramètres de votre compte. Cependant, vous souhaiterez peut-être définir un modèle par défaut afin que tous vos contacts dans ce coffre-fort disposent de ce modèle par défaut.",
+    "A template defines how contacts should be displayed. You can have as many templates as you want - they are defined in your Account settings. However, you might want to define a default template so all your contacts in this vault have this template by default.": "Un modèle définit la manière dont les contacts doivent être affichés. Vous pouvez avoir autant de modèles que vous le souhaitez – ils sont définis dans les paramètres de votre compte. Cependant, vous souhaiterez peut-être définir un modèle par défaut afin que tous vos contacts dans ce coffre disposent de ce modèle par défaut.",
     "A template is made of pages, and in each page, there are modules. How data is displayed is entirely up to you.": "Un modèle est composé de pages, et dans chaque page, il y a des modules. La manière dont les données sont affichées dépend entièrement de vous.",
     "Atheist": "Athée",
     "At which time should we send the notification, when the reminder occurs?": "A quel moment devons-nous envoyer la notification, lorsque le rappel intervient ?",
@@ -235,7 +235,7 @@
     "Cancel your account": "Annuler votre compte",
     "Can do everything, including adding or removing other users, managing billing and closing the account.": "Peut tout faire, y compris ajouter ou supprimer d’autres utilisateurs, gérer la facturation et fermer le compte.",
     "Can do everything, including adding or removing other users.": "Peut tout faire, y compris ajouter ou supprimer d’autres utilisateurs.",
-    "Can edit data, but can’t manage the vault.": "Peut modifier les données, mais ne peut pas gérer le coffre-fort.",
+    "Can edit data, but can’t manage the vault.": "Peut modifier les données, mais ne peut pas gérer le coffre.",
     "Can view data, but can’t edit it.": "Peut afficher les données, mais ne peut pas les modifier.",
     "Can’t be moved or deleted": "Ne peut pas être déplacé ou supprimé",
     "Cat": "Chat",
@@ -309,7 +309,7 @@
     "Create at least one page to display contact’s data.": "Créez au moins une page pour afficher les données du contact.",
     "Create at least one template to use Monica.": "Créez au moins un modèle pour utiliser Monica.",
     "Create a user": "Créer un utilisateur",
-    "Create a vault": "Créer un coffre-fort",
+    "Create a vault": "Créer un coffre",
     "Created.": "Créé·e.",
     "created a goal": "créé un objectif",
     "created the contact": "créé le contact",
@@ -363,9 +363,9 @@
     "Delete the address": "Supprimer l’adresse",
     "Delete the photo": "Supprimer la photo",
     "Delete the slice": "Supprimer la tranche",
-    "Delete the vault": "Supprimer le coffre-fort",
+    "Delete the vault": "Supprimer le coffre",
     "Delete your account on https://customers.monicahq.com.": "Supprimez votre compte sur https://customers.monicahq.com.",
-    "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Supprimer le coffre-fort signifie supprimer définitivement toutes les données contenues dans ce coffre-fort. Il n’y a pas de retour en arrière. Soyez-en sûr, s’il vous plaît.",
+    "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Supprimer le coffre signifie supprimer définitivement toutes les données contenues dans ce coffre. Il n’y a pas de retour en arrière. Soyez-en sûr, s’il vous plaît.",
     "Description": "Description",
     "Detail of a goal": "Détail d’un objectif",
     "Details in the last year": "Détails l’année dernière",
@@ -428,7 +428,7 @@
     "Filter": "Filtrer",
     "Filter list or create a new label": "Filtrer la liste ou créer une nouvelle étiquette",
     "Filter list or create a new tag": "Filtrer la liste ou créer une nouvelle balise",
-    "Find a contact in this vault": "Trouver un contact dans ce coffre-fort",
+    "Find a contact in this vault": "Trouver un contact dans ce coffre",
     "Finish enabling two factor authentication.": "Terminez l’activation de l’authentification à deux facteurs.",
     "First name": "Prénom",
     "First name Last name": "Prénom Nom",
@@ -567,7 +567,7 @@
     "Life metrics let you track metrics that are important to you.": "Les métriques de vie vous permettent de suivre les métriques qui sont importantes pour vous.",
     "LinkedIn": "LinkedIn",
     "List of addresses": "Liste des adresses",
-    "List of addresses of the contacts in the vault": "Liste des adresses des contacts dans le coffre-fort",
+    "List of addresses of the contacts in the vault": "Liste des adresses des contacts dans le coffre",
     "List of all important dates": "Liste de toutes les dates importantes",
     "Loading…": "Chargement…",
     "Load previous entries": "Charger les entrées précédentes",
@@ -816,7 +816,7 @@
     "Searched": "Reherché",
     "Searching…": "Recherche…",
     "Search something": "Rechercher quelque chose",
-    "Search something in the vault": "Rechercher quelque chose dans le coffre-fort",
+    "Search something in the vault": "Rechercher quelque chose dans le coffre",
     "Sections:": "Sections :",
     "Security keys": "Clés de sécurité",
     "Select a group or create a new one": "Sélectionner un groupe ou en créer un nouveau",
@@ -1066,9 +1066,9 @@
     "The user has been deleted": "L’utilisateur a été supprimé",
     "The user has been removed": "L’utilisateur a été supprimé",
     "The user has been updated": "L’utilisateur a été mis à jour",
-    "The vault has been created": "Le coffre-fort a été créé",
-    "The vault has been deleted": "Le coffre-fort a été supprimé",
-    "The vault have been updated": "Le coffre-fort a été mis à jour",
+    "The vault has been created": "Le coffre a été créé",
+    "The vault has been deleted": "Le coffre a été supprimé",
+    "The vault have been updated": "Le coffre a été mis à jour",
     "they/them": "ils/eux",
     "This address is not active anymore": "Cette adresse n’est plus active",
     "This device": "Cet appareil",
@@ -1105,7 +1105,7 @@
     "Took the metro": "A pris le métro",
     "Too Many Requests": "Trop de requêtes",
     "To see if they need anything": "Pour voir s’ils ont besoin de quelque chose",
-    "To start, you need to create a vault.": "Pour commencer, vous devez créer un coffre-fort.",
+    "To start, you need to create a vault.": "Pour commencer, vous devez créer un coffre.",
     "Total:": "Total :",
     "Total streaks": "Total des séries",
     "Track a new metric": "Suivre une nouvelle métrique",
@@ -1159,7 +1159,7 @@
     "Validating key…": "Validation de la clé…",
     "Value copied into your clipboard": "Valeur copiée dans votre presse-papiers",
     "Vaults contain all your contacts data.": "Les coffres contiennent toutes les données de vos contacts.",
-    "Vault settings": "Paramètres du coffre-fort",
+    "Vault settings": "Paramètres du coffre",
     "ve/ver": "ve/ver",
     "Verification email sent": "L’email de vérification a été envoyé",
     "Verified": "Vérifié",
@@ -1213,7 +1213,7 @@
     "Who makes the loan?": "Qui accorde le prêt ?",
     "Whoops!": "Oups !",
     "Whoops! Something went wrong.": "Oups ! Un problème est survenu.",
-    "Who should we invite in this vault?": "Qui devrions-nous inviter dans ce coffre-fort ?",
+    "Who should we invite in this vault?": "Qui devrions-nous inviter dans ce coffre ?",
     "Who the loan is for?": "À qui s’adresse le prêt ?",
     "Wish good day": "Souhaiter une bonne journée",
     "Work": "Travail",
