--- a/lang/fr.json
+++ b/lang/fr.json
@@ -147,7 +147,7 @@
     "All the journals": "Toutes les revues",
     "All the labels used in the vault": "Toutes les étiquettes utilisées dans le coffre",
     "All the notes": "Toutes les notes",
-    "All the pet categories": "Toutes les catégories d’animaux",
+    "All the pet categories": "Toutes les catégories d’animaux de compagnie",
     "All the photos": "Toutes les photos",
     "All the planned reminders": "Tous les rappels prévus",
     "All the pronouns": "Tous les pronoms",
@@ -205,7 +205,7 @@
     "A template defines how contacts should be displayed. You can have as many templates as you want - they are defined in your Account settings. However, you might want to define a default template so all your contacts in this vault have this template by default.": "Un modèle définit la manière dont les contacts doivent être affichés. Vous pouvez avoir autant de modèles que vous le souhaitez – ils sont définis dans les paramètres de votre compte. Cependant, vous souhaiterez peut-être définir un modèle par défaut afin que tous vos contacts dans ce coffre disposent de ce modèle par défaut.",
     "A template is made of pages, and in each page, there are modules. How data is displayed is entirely up to you.": "Un modèle est composé de pages, et dans chaque page, il y a des modules. La manière dont les données sont affichées dépend entièrement de vous.",
     "Atheist": "Athée",
-    "At which time should we send the notification, when the reminder occurs?": "A quel moment devons-nous envoyer la notification, lorsque le rappel intervient ?",
+    "At which time should we send the notification, when the reminder occurs?": "À quel moment devons-nous envoyer la notification, lorsque le rappel intervient ?",
     "Audio-only call": "Appel audio uniquement",
     "Auto saved a few seconds ago": "Enregistrement automatique il y a quelques secondes",
     "Available modules:": "Modules disponibles :",
@@ -222,7 +222,7 @@
     "Breakdown of the current usage": "Répartition de l’usage actuel",
     "brother/sister": "frère/soeur",
     "Browser Sessions": "Sessions de navigateur",
-    "Buddhist": "bouddhiste",
+    "Buddhist": "Bouddhiste",
     "Business": "Entreprise",
     "By last updated": "Par dernière mise à jour",
     "Calendar": "Calendrier",
@@ -250,10 +250,10 @@
     "child": "enfant",
     "Choose": "Choisir",
     "Choose a color": "Choisir une couleur",
-    "Choose an existing address": "Choisissez une adresse existante",
-    "Choose an existing contact": "Choisissez un contact existant",
-    "Choose a template": "Choisissez un modèle",
-    "Choose a value": "Choisissez une valeur",
+    "Choose an existing address": "Choisir une adresse existante",
+    "Choose an existing contact": "Choisir un contact existant",
+    "Choose a template": "Choisir un modèle",
+    "Choose a value": "Choisir une valeur",
     "Chosen type:": "Type choisi :",
     "Christian": "Chrétien",
     "Christmas": "Noël",
@@ -262,7 +262,7 @@
     "Click on a day to see the details": "Cliquez sur un jour pour voir les détails",
     "Close": "Fermer",
     "close edit mode": "fermer le mode édition",
-    "Club": "club",
+    "Club": "Club",
     "Code": "Code",
     "colleague": "collègue",
     "Companies": "Entreprises",
@@ -298,7 +298,7 @@
     "Create a contact entry for this person": "Créer une entrée de contact pour cette personne",
     "Create a journal": "Créer un journal",
     "Create a journal metric": "Créer une métrique de journal",
-    "Create a journal to document your life.": "Créez un journal pour documenter votre vie.",
+    "Create a journal to document your life.": "Créer un journal pour documenter votre vie.",
     "Create an account": "Créer un compte",
     "Create a new address": "Créer une nouvelle adresse",
     "Create a new team to collaborate with others on projects.": "Créer une nouvelle équipe pour collaborer avec d’autres personnes sur des projets.",
@@ -306,13 +306,13 @@
     "Create a post": "Créer un message",
     "Create a reminder": "Créer un rappel",
     "Create a slice of life": "Créez une tranche de vie",
-    "Create at least one page to display contact’s data.": "Créez au moins une page pour afficher les données du contact.",
-    "Create at least one template to use Monica.": "Créez au moins un modèle pour utiliser Monica.",
+    "Create at least one page to display contact’s data.": "Créer au moins une page pour afficher les données du contact.",
+    "Create at least one template to use Monica.": "Créer au moins un modèle pour utiliser Monica.",
     "Create a user": "Créer un utilisateur",
     "Create a vault": "Créer un coffre",
     "Created.": "Créé·e.",
-    "created a goal": "créé un objectif",
-    "created the contact": "créé le contact",
+    "created a goal": "a créé un objectif",
+    "created the contact": "a créé le contact",
     "Create label": "Créer une étiquette",
     "Create new label": "Créer une nouvelle étiquette",
     "Create new tag": "Créer une nouvelle balise",
@@ -350,12 +350,12 @@
     "Delete a new key": "Supprimer une nouvelle clé",
     "Delete API Token": "Supprimer le jeton API",
     "Delete contact": "Effacer le contact",
-    "deleted a contact information": "supprimé une information de contact",
-    "deleted a goal": "supprimé un objectif",
-    "deleted an address": "supprimé une adresse",
-    "deleted an important date": "supprimé une date importante",
-    "deleted a note": "supprimé une note",
-    "deleted a pet": "supprimé un animal de compagnie",
+    "deleted a contact information": "a supprimé une information de contact",
+    "deleted a goal": "a supprimé un objectif",
+    "deleted an address": "a supprimé une adresse",
+    "deleted an important date": "a supprimé une date importante",
+    "deleted a note": "a supprimé une note",
+    "deleted a pet": "a supprimé un animal de compagnie",
     "Deleted author": "Auteur supprimé",
     "Delete group": "Supprimer le groupe",
     "Delete journal": "Supprimer le journal",
@@ -368,12 +368,12 @@
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Supprimer le coffre signifie supprimer définitivement toutes les données contenues dans ce coffre. Il n’y a pas de retour en arrière. Soyez-en sûr, s’il vous plaît.",
     "Description": "Description",
     "Detail of a goal": "Détail d’un objectif",
-    "Details in the last year": "Détails l’année dernière",
+    "Details in the last year": "Détails de l’année dernière",
     "Disable": "Désactiver",
     "Disable all": "Désactiver tous les",
     "Disconnect": "Déconnecter",
-    "Discuss partnership": "Discutez du partenariat",
-    "Discuss recent purchases": "Discutez des achats récents",
+    "Discuss partnership": "Discution à propos partenariat",
+    "Discuss recent purchases": "Discution à propos d’achats récents",
     "Dismiss": "Rejeter",
     "Display help links in the interface to help you (English only)": "Afficher des liens d’aide dans l’interface pour vous aider (en anglais uniquement)",
     "Distance": "Distance",
@@ -602,7 +602,7 @@
     "Manage gift states": "Gérer les états de cadeaux",
     "Manage group types": "Gérer les types de groupes",
     "Manage modules": "Gérer les modules",
-    "Manage pet categories": "Gérer les catégories d’animaux",
+    "Manage pet categories": "Gérer les catégories d’animaux de compagnie",
     "Manage post templates": "Gérer les modèles de publication",
     "Manage pronouns": "Gérer les pronoms",
     "Manager": "Gestionnaire",
@@ -705,8 +705,8 @@
     "Personalize your account": "Personnalisez votre compte",
     "Pet categories": "Catégories d’animaux de compagnie",
     "Pet categories let you add types of pets that contacts can add to their profile.": "Les catégories d’animaux de compagnie vous permettent d’ajouter des types d’animaux de compagnie que les contacts peuvent ajouter à leur profil.",
-    "Pet category": "Catégorie d’animal de compagnie",
-    "Pets": "Animaux domestiques",
+    "Pet category": "Catégorie d’animaux de compagnie",
+    "Pets": "Animaux de compagnie",
     "Phone": "Téléphone",
     "Photo": "Image",
     "Photos": "Photos",
@@ -948,8 +948,8 @@
     "The gift state has been deleted": "L’état du cadeau a été supprimé",
     "The gift state has been updated": "L’état du cadeau a été mis à jour",
     "The given data was invalid.": "La donnée renseignée est incorrecte.",
-    "The goal has been created": "Le but a été créé",
-    "The goal has been deleted": "Le but a été supprimé",
+    "The goal has been created": "L’objectif a été créé",
+    "The goal has been deleted": "L’objectif a été supprimé",
     "The goal has been edited": "L’objectif a été modifié",
     "The group has been added": "Le groupe a été ajouté",
     "The group has been deleted": "Le groupe a été supprimé",
@@ -1046,7 +1046,7 @@
     "The section has been updated": "La rubrique a été mise à jour",
     "These people have been invited to your team and have been sent an invitation email. They may join the team by accepting the email invitation.": "Ces personnes ont été invitées à rejoindre votre équipe et ont été prévenues avec un e-mail d’invitation. Ils peuvent rejoindre l’équipe grâce à l’e-mail d’invitation.",
     "The tag has been added": "L’étiquette a été ajoutée",
-    "The tag has been created": "L’étiquette a été créé",
+    "The tag has been created": "L’étiquette a été créée",
     "The tag has been deleted": "L’étiquette a été supprimée",
     "The tag has been updated": "L’étiquette a été mise à jour",
     "The task has been created": "La tâche a été créée",
@@ -1165,7 +1165,7 @@
     "Verified": "Vérifié",
     "Verify Email Address": "Vérifier l’adresse e-mail",
     "Verify this email address": "Vérifiez cette adresse e-mail",
-    "Version :version — commit [:short](:url).": "Version :version — valider [:short](:url).",
+    "Version :version — commit [:short](:url).": "Version :version — commit [:short](:url).",
     "Via Telegram": "Par Telegram",
     "Video call": "Appel vidéo",
     "View": "Afficher",
